<!--
 Copyright 2021 Google LLC

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<resources>
    <string name="app_name">FluentAR</string>
    <string name="scan_busy">Wait</string>
    <string name="scan_available">Scan</string>
    <string name="info">Please login with your information</string>
    <string name="welcome">Welcome</string>
    <string name="clear">Clear</string>
    <string name="use_cloud_ml">Use Cloud ML</string>
    <string name="open_camera">Open Camera</string>
    <string name="new_password">Password</string>
    <string name="confirm_new_password">Confirm Password</string>
    <string name="Change_password">Change Password</string>
    <string name="help_text">Welcome to FluentAR! Here you can learn how to navigate through the app and make the most of its features.</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="hi">Hi!!</string>
    <string name="create">Create a new Account</string>
    <string name="enter_email">Enter your Email</string>
    <string name="loading">Loading…</string>
    <string name="loadingtoo">Loading…</string>
    <string name="reg">Register</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="Language">Language</string>
    <string name="loading_please_wait">Loading… Please Wait</string>
    <string name="create_account_text">Don\'t have an account? Sign Up</string>
    <string name="register_account">Already have an account? Log In</string>
    <string name="login_text">login</string>
    <string name="menu">Menu</string>
    <string name="graphic_for_ar_camera">Graphic for AR camera</string>
    <string name="open_ar_camera">Open AR Camera</string>
    <string name="start_learning_new_vocabulary">Start learning new vocabulary</string>
    <string name="study_graphic">Study graphic</string>
    <string name="study">Study</string>
    <string name="test_graphic">Test graphic</string>
    <string name="test">Quiz</string>
    <string name="already_have_an_account_log_in">Already have an account? Log In</string>
    <string name="register">REGISTER</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="loading_please_wait_too">Loading… Please Wait</string>
    <string name="quizwelcome">Welcome to Quiz</string>
    <string name="ar_language_learning_app">AR Language Learning App</string>
    <string name="quiz">Quiz</string>
    <string name="what_is_this">What is this?</string>
    <string name="answer">Answer</string>
    <string name="submit">Submit</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="current_password">Current Password</string>
    <string name="language_selection">Language_Selection</string>
    <string name="information">Info</string>
    <string name="take_a_test_to_know_your_progress">Take a quiz to know your progress</string>
    <string name="profile">Profile</string>
    <string name="delete_data">Delete Data</string>
    <string name="help">Help</string>
    <string name="check_if_you_are_a_top_user">Check if you are a top user!</string>
    <string name="top_3_users">Leaderboard</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more_info">More Info</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="help_step_0">How to Use the App</string>
    <string name="help_step_1">1. Open the app and log in with your credentials.</string>
    <string name="help_step_2">2. Navigate to \'AR Camera\' menu to switch the camera on and scan your surroundings.</string>
    <string name="help_step_3">3. Navigate to \'Study\' section to study the language.</string>
    <string name="help_step_4">4. Test your knowledge using the \'Quiz\' section</string>
    <string name="help_step_5">5. Check the leaderboard in the \'Leaderboard\' section in the app.</string>
    <string name="help_step_6">6. For more help, visit the \'Help\' section in the app.</string>
    <string name="help_step_7">7. To change the language, logout or delete your data, visit the \'Profile\' section in the app.</string>
    <string name="_3rd_place">3rd place</string>
    <string name="_2nd_place">2nd place</string>
    <string name="_1st_place">1st place</string>
    <string name="image">image</string>
    <string name="translation">translation</string>
    <string name="label">Label</string>

</resources>