<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/background_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sproj.arimagerecognizer.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loadingIndicatorReg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#805D615B"
        android:elevation="100dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/loading"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar2" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="#F8F8F8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@color/lightblue"
        android:alpha="0.7">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hi"
            android:textSize="40sp"
            android:textColor="@color/header_color"
            android:textStyle="bold"
            android:layout_marginTop="50dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:textColor="@color/teal_700"
            android:textStyle="bold"
            android:textSize="19sp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg"
        android:textSize="35sp"
        android:textColor="@color/teal_700"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/teal_700"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"/>
    <EditText
        android:id="@+id/editTextNewUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:background="@drawable/textbox_background"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/teal_700"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"/>
    <EditText
        android:id="@+id/editTextNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:background="@drawable/textbox_background"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_new_password"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/teal_700"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword"
        android:background="@drawable/textbox_background"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/button_register_enter"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/rounded_button_blue"
        android:text="@string/reg"
        android:textColor="@color/teal_700"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/create_account_text"
        android:layout_gravity="center"
        android:alpha="0.7"/>
</LinearLayout>