<?xml version="1.0" encoding="utf-8"?><!--
 Copyright 2021 Google LLC

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <android.opengl.GLSurfaceView
        android:id="@+id/surfaceview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="80dp"
        app:layout_dodgeInsetEdges="bottom">

      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/scanButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingHorizontal="60dp"
          android:text="@string/scan_available" />

      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/clearButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingHorizontal="60dp"
          android:text="@string/clear" />

    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loading_indicator1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#805D615B"
        android:visibility="gone">

      <ProgressBar
          android:id="@+id/progressBar1"
          style="?android:attr/progressBarStyle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:indeterminateTint="#FFFFFF"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:id="@+id/textView31"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/loading_please_wait"
          android:textColor="#FFFFFF"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/progressBar1" />
    </androidx.constraintlayout.widget.ConstraintLayout>
  </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

